Fixing minor dark mode issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -329,6 +329,7 @@ header {
 
 #thesaurus-input{
   height: 30px;
+  color: #495057;
 }
 #thesaurus-input::selection{
   color: rgb(0, 175, 175);
